# Gemini-Code-Reviewer

./: .env.local.example  .gitignore  ARCHITECTURE.md  App.tsx  CHANGELOG.md  README.md  README.monorepo.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  package.json.new  pnpm-lock.yaml  setup.js  turbo.json
apps/desktop/: README.md  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/extension/: package.json  wxt.config.ts
apps/extension/.output/chrome-mv3/: background.js  manifest.json  options.js  popup.js  sidepanel.js
apps/extension/.output/chrome-mv3/content-scripts/: content.js
apps/extension/entrypoints/: background.ts  content.tsx  options.tsx  popup.tsx  sidepanel.html  sidepanel.tsx
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx
components/: CodeInput.tsx  CorrectedCodeDisplay.tsx  ExportMenu.tsx  FeedbackDisplay.tsx  HistoryPanel.tsx  LanguageSelector.tsx  Settings.tsx
components/icons/: LoaderIcon.tsx  WandIcon.tsx
docs/: DESKTOP_GUIDE.md  EXTENSION_GUIDE.md  FEATURES.md  TROUBLESHOOTING.md
hooks/: useHistory.ts  useSettings.ts
services/: geminiService.ts
types/: index.ts
utils/: chunking.ts  export.ts
